Fix tests failing with compliance 22 after merging from master (#2117)